--- a/wiki/Tamarin.wiki
+++ b/wiki/Tamarin.wiki
@@ -11,7 +11,7 @@ The goal of the "Tamarin" project is to implement a high-performance,
 open source implementation of the !ActionScript™ 3 language,
 which is based upon and extends ECMAScript 3rd edition (ES3).
 
- !ActionScript provides many extensions to the ECMAScript language,
+ ActionScript provides many extensions to the ECMAScript language,
 including packages, namespaces, classes, and optional strict typing of variables.
 "Tamarin" implements both a high-performance just-in-time compiler and interpreter. 
 
