Edited wiki page API through web user interface.

--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -57,7 +57,8 @@ Our focus is the following
 
 === AVMGlue ===
 
-The AVMGlue Library.
+The AVMGlue Library.<br>
+(The name come from `avmglue.abc` used by Adobe to produce the Flash Player.)
 
 Provides an open source implementation of the *Flash Player API* and *AIR API*<br>
 (what we call the *FPAPI*: Flash Platform API).
@@ -70,8 +71,4 @@ But as we are not building an open source Flash Player there are limitations
   * it is not our goal to display graphics<br>even if you can use a `Sprite` or `Bitmap` class it will not show something on the screen.
   * it took more than 10 years for a talented team of Adobe engineers<br>to define and implement all those API, don't expect a 100% implementation for everything.
   * because we run on the command line and server side we may change slightly the FPAPI<br>some behaviours or rules could be completely different,<br>for ex it would make no sense to limit our API based on a security sandbox.
-
-The name come from `avmglue.abc` used by Adobe to produce the Flash Player.
-
-
 
