Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -1,5 +1,6 @@
   * [Main ↑ Home]
   * [Users Working with redtamarin]
+    * [SDK Software Development Kit]
     * [GettingStarted Getting Started]
       * [GettingStartedInShinyColor More Details, Shiny Color and Screenshots]
       * [GettingStartedAvmglue use avmglue]
@@ -15,6 +16,7 @@
     * [Code101 Get the code]
     * [NativeClasses HOWTO work with Native Classes]
     * [Build HOWTO Build]
+    * [SDKDesign SDK Design Doc]
     * [CrossPlatform Cross Platform]
       * [VMPI VMPI]
       * [TamarinNotes notes about Tamarin]
