--- a/wiki/SDK.wiki
+++ b/wiki/SDK.wiki
@@ -1,10 +1,24 @@
-#summary Software Development Kit.
+#summary RedTamarin Software Development Kit.
 
 == Introduction ==
 
+The RedTamarin SDK is what a developer need to install to be able to work with the different redtamarin tools and libraries.
+
+The SDK provides:
+  * *redshell* AS3 command line runtimes
+  * *redbean* AS3 make and compiler tools
+  * *as3distro* AS3 package manager
+
+At the contrary of Java we don't make differences between a JDK (Java Development Kit) and a SDK (Software Development Kit), we have only a SDK.
+
+== Installation ==
+
 TODO
 
+== Configuration ==
 
-== Details ==
+TODO
+
+== Update ==
 
 TODO
