--- a/wiki/EventLoopNotes.wiki
+++ b/wiki/EventLoopNotes.wiki
@@ -207,3 +207,51 @@ No rendering occurs unless the SWF becomes visible again.
 to 8 frames/sec when audio is playing.
 </pre>
 
+== Previous Work to Simulate an Event Loop in Tamarin ==
+
+Previously in Tamarin you could see in `/test/performance/canaries/`
+
+[https://code.google.com/p/redshell/source/browse/test/performance/canaries/simpleflexapputil/playershell.as?spec=svn09c5c83eea908c195ce602623d78616612252afc&r=fec870a438a8054ec2028deffd990bcec067ba0f playershell.as] implemented by Dan Schaffer.
+
+see [https://bugzilla.mozilla.org/show_bug.cgi?id=473985 Bug 473985 - add interactive shell capabilities to canaries/simpleflexapputil/playershell.as]
+
+from simpleflexapp.as
+{{{
+include "simpleflexapputil/playershell.as"
+
+var start:int=new Date();
+
+loadabcfile("canaries/simpleflexapputil/avmglue_abc");
+loadabcfile("canaries/simpleflexapputil/hello_frame1_abc");
+
+objectsnames.push("_hello2_mx_managers_SystemManager");
+constructobject("0");
+dispatchevent("init 0");
+
+loadabcfile("canaries/simpleflexapputil/hello_frame2_abc");
+
+set("currentFrame 0 1");
+Stage.getInstance().dispatchEvent(new Event("render"));
+Stage.getInstance().dispatchEvent(new Event("render"));
+Stage.getInstance().dispatchEvent(new Event("render"));
+Stage.getInstance().dispatchEvent(new Event("render"));
+var totaltime:int=new Date()-start;
+
+showdisplaylist();
+
+print("metric time "+totaltime);
+}}}
+
+Very interesting bit of code which allow us to see a glimpse of
+  * how to implement a custom !EventDispatcher
+  * how to run an event loop
+  * even how to parse a SWF file and some of its tags (like DoABC)
+
+
+== How We Are Doing It ==
+
+It's a work in progress, but here some basic rules
+  * try to do it in AS3 and not in C/C++
+  * respect the Flash/AIR API signatures but allow us to use the *AVM2* namespace to add/access special stuff
+  * starts simple then go more complex
+  * define an *IEventLoop*
