--- a/wiki/EventLoopNotes.wiki
+++ b/wiki/EventLoopNotes.wiki
@@ -256,6 +256,15 @@ in particular [https://code.google.com/p/vegas/source/browse/AS2/trunk/src/vegas
 
 Yep, Marc did a great work implementing W3C DOM Events Level 2/3 in JS and AS2.
 
+== More Documentation on the Flash Internals ==
+
+[http://www.senocular.com/flash/tutorials/orderofoperations/ Order of Operations in ActionScript]
+
+[http://blog.johannest.com/2009/06/15/the-movieclip-life-cycle-revisited-from-event-added-to-event-removed_from_stage/ The MovieClip life cycle revisited. From Event.ADDED to Event.REMOVED_FROM_STAGE]
+
+also http://www.alanklement.com/img/fp10_timeline.gif
+
+
 == How We Are Doing It ==
 
 It's a work in progress, but here some basic rules
